// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingDetailsForm component should display loader 1`] = `
<BillingDetailsForm
  contact={null}
  fetchContact={[Function]}
  updateContact={null}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              className="section"
              to="/app/settings/billing/"
            >
              Billing & Usage
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          >
            Billing details
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <nav
            aria-label="breadcrumb"
            className=""
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    className="section"
                    to="/app/settings/billing/"
                  >
                    <a
                      className="section"
                      to="/app/settings/billing/"
                    >
                      Billing & Usage
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  Billing details
                </li>
              </BreadcrumbItem>
            </ol>
          </nav>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <p>
          Please enter the billing details you'd like us to use on your next invoice.
        </p>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="row"
          >
            <Col
              lg={6}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="col-lg-6"
              >
                <Loader
                  inline={false}
                  minHeight="500px"
                  size="40px"
                >
                  <div
                    className="container"
                  >
                    <div
                      className="inner"
                      style={
                        Object {
                          "minHeight": "500px",
                        }
                      }
                    >
                      <i
                        className="icon-custom icon-circle-o-notch md-spin"
                        style={
                          Object {
                            "fontSize": "40px",
                          }
                        }
                      />
                    </div>
                  </div>
                </Loader>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Container>
  </div>
</BillingDetailsForm>
`;

exports[`BillingDetailsForm component should display not display the form 1`] = `
<BillingDetailsForm
  contact={null}
  fetchContact={[Function]}
  updateContact={null}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              className="section"
              to="/app/settings/billing/"
            >
              Billing & Usage
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          >
            Billing details
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <nav
            aria-label="breadcrumb"
            className=""
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    className="section"
                    to="/app/settings/billing/"
                  >
                    <a
                      className="section"
                      to="/app/settings/billing/"
                    >
                      Billing & Usage
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  Billing details
                </li>
              </BreadcrumbItem>
            </ol>
          </nav>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <p>
          Please enter the billing details you'd like us to use on your next invoice.
        </p>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="row"
          >
            <Col
              lg={6}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="col-lg-6"
              />
            </Col>
          </div>
        </Row>
      </div>
    </Container>
  </div>
</BillingDetailsForm>
`;

exports[`BillingDetailsForm component should display the form with billing contact information 1`] = `
<BillingDetailsForm
  contact={
    Immutable.Map {
      "email": "hello@acme.gorgias.io",
      "shipping": Immutable.Map {
        "name": "Gorgias",
        "phone": "4155555556",
        "address": Immutable.Map {
          "line1": "52 Washburn St",
          "line2": "",
          "city": "San Francisco",
          "state": "CA",
          "country": "United States",
          "postal_code": "94103",
        },
      },
    }
  }
  fetchContact={[Function]}
  updateContact={null}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              className="section"
              to="/app/settings/billing/"
            >
              Billing & Usage
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            tag="li"
          >
            Billing details
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          aria-label="breadcrumb"
          listTag="ol"
          tag="nav"
        >
          <nav
            aria-label="breadcrumb"
            className=""
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    className="section"
                    to="/app/settings/billing/"
                  >
                    <a
                      className="section"
                      to="/app/settings/billing/"
                    >
                      Billing & Usage
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  Billing details
                </li>
              </BreadcrumbItem>
            </ol>
          </nav>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <p>
          Please enter the billing details you'd like us to use on your next invoice.
        </p>
        <Row
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="row"
          >
            <Col
              lg={6}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <div
                className="col-lg-6"
              >
                <Form
                  onSubmit={[Function]}
                  tag="form"
                >
                  <form
                    className=""
                    onSubmit={[Function]}
                  >
                    <InputField
                      help="Invoices are sent to this email address."
                      label="Billing email"
                      name="email"
                      onChange={[Function]}
                      required={true}
                      type="email"
                      value="hello@acme.gorgias.io"
                    >
                      <FormGroup
                        className="InputField required"
                        color=""
                        tag="div"
                      >
                        <div
                          className="InputField required form-group"
                          color=""
                        >
                          <Label
                            className="control-label"
                            htmlFor="id-email"
                            tag="label"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <label
                              className="control-label"
                              htmlFor="id-email"
                            >
                              Billing email
                            </label>
                          </Label>
                          <div
                            className=""
                          >
                            <Input
                              className=""
                              id="id-email"
                              onChange={[Function]}
                              required={true}
                              type="email"
                              value="hello@acme.gorgias.io"
                            >
                              <input
                                className="form-control"
                                id="id-email"
                                onChange={[Function]}
                                required={true}
                                type="email"
                                value="hello@acme.gorgias.io"
                              />
                            </Input>
                          </div>
                          <FormText
                            color="muted"
                            tag="small"
                          >
                            <small
                              className="form-text text-muted"
                            >
                              Invoices are sent to this email address.
                            </small>
                          </FormText>
                        </div>
                      </FormGroup>
                    </InputField>
                    <InputField
                      label="Company name"
                      name="name"
                      onChange={[Function]}
                      placeholder="My Company"
                      type="text"
                      value="Gorgias"
                    >
                      <FormGroup
                        className="InputField"
                        color=""
                        tag="div"
                      >
                        <div
                          className="InputField form-group"
                          color=""
                        >
                          <Label
                            className="control-label"
                            htmlFor="id-name"
                            tag="label"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <label
                              className="control-label"
                              htmlFor="id-name"
                            >
                              Company name
                            </label>
                          </Label>
                          <div
                            className=""
                          >
                            <Input
                              className=""
                              id="id-name"
                              onChange={[Function]}
                              placeholder="My Company"
                              type="text"
                              value="Gorgias"
                            >
                              <input
                                className="form-control"
                                id="id-name"
                                onChange={[Function]}
                                placeholder="My Company"
                                type="text"
                                value="Gorgias"
                              />
                            </Input>
                          </div>
                        </div>
                      </FormGroup>
                    </InputField>
                    <InputField
                      label="Phone number"
                      name="phone"
                      onChange={[Function]}
                      placeholder="415 859 3010"
                      type="text"
                      value="4155555556"
                    >
                      <FormGroup
                        className="InputField"
                        color=""
                        tag="div"
                      >
                        <div
                          className="InputField form-group"
                          color=""
                        >
                          <Label
                            className="control-label"
                            htmlFor="id-phone"
                            tag="label"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <label
                              className="control-label"
                              htmlFor="id-phone"
                            >
                              Phone number
                            </label>
                          </Label>
                          <div
                            className=""
                          >
                            <Input
                              className=""
                              id="id-phone"
                              onChange={[Function]}
                              placeholder="415 859 3010"
                              type="text"
                              value="4155555556"
                            >
                              <input
                                className="form-control"
                                id="id-phone"
                                onChange={[Function]}
                                placeholder="415 859 3010"
                                type="text"
                                value="4155555556"
                              />
                            </Input>
                          </div>
                        </div>
                      </FormGroup>
                    </InputField>
                    <InputField
                      label="Address (line 1)"
                      name="line1"
                      onChange={[Function]}
                      placeholder="123 Post St"
                      type="text"
                      value="52 Washburn St"
                    >
                      <FormGroup
                        className="InputField"
                        color=""
                        tag="div"
                      >
                        <div
                          className="InputField form-group"
                          color=""
                        >
                          <Label
                            className="control-label"
                            htmlFor="id-line1"
                            tag="label"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <label
                              className="control-label"
                              htmlFor="id-line1"
                            >
                              Address (line 1)
                            </label>
                          </Label>
                          <div
                            className=""
                          >
                            <Input
                              className=""
                              id="id-line1"
                              onChange={[Function]}
                              placeholder="123 Post St"
                              type="text"
                              value="52 Washburn St"
                            >
                              <input
                                className="form-control"
                                id="id-line1"
                                onChange={[Function]}
                                placeholder="123 Post St"
                                type="text"
                                value="52 Washburn St"
                              />
                            </Input>
                          </div>
                        </div>
                      </FormGroup>
                    </InputField>
                    <InputField
                      label="Address (line 2)"
                      name="line2"
                      onChange={[Function]}
                      placeholder="2nd floor"
                      type="text"
                      value=""
                    >
                      <FormGroup
                        className="InputField"
                        color=""
                        tag="div"
                      >
                        <div
                          className="InputField form-group"
                          color=""
                        >
                          <Label
                            className="control-label"
                            htmlFor="id-line2"
                            tag="label"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <label
                              className="control-label"
                              htmlFor="id-line2"
                            >
                              Address (line 2)
                            </label>
                          </Label>
                          <div
                            className=""
                          >
                            <Input
                              className=""
                              id="id-line2"
                              onChange={[Function]}
                              placeholder="2nd floor"
                              type="text"
                              value=""
                            >
                              <input
                                className="form-control"
                                id="id-line2"
                                onChange={[Function]}
                                placeholder="2nd floor"
                                type="text"
                                value=""
                              />
                            </Input>
                          </div>
                        </div>
                      </FormGroup>
                    </InputField>
                    <Row
                      tag="div"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <div
                        className="row"
                      >
                        <Col
                          lg={6}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="col-lg-6"
                          >
                            <InputField
                              label="City"
                              name="city"
                              onChange={[Function]}
                              placeholder="San Francisco"
                              type="text"
                              value="San Francisco"
                            >
                              <FormGroup
                                className="InputField"
                                color=""
                                tag="div"
                              >
                                <div
                                  className="InputField form-group"
                                  color=""
                                >
                                  <Label
                                    className="control-label"
                                    htmlFor="id-city"
                                    tag="label"
                                    widths={
                                      Array [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <label
                                      className="control-label"
                                      htmlFor="id-city"
                                    >
                                      City
                                    </label>
                                  </Label>
                                  <div
                                    className=""
                                  >
                                    <Input
                                      className=""
                                      id="id-city"
                                      onChange={[Function]}
                                      placeholder="San Francisco"
                                      type="text"
                                      value="San Francisco"
                                    >
                                      <input
                                        className="form-control"
                                        id="id-city"
                                        onChange={[Function]}
                                        placeholder="San Francisco"
                                        type="text"
                                        value="San Francisco"
                                      />
                                    </Input>
                                  </div>
                                </div>
                              </FormGroup>
                            </InputField>
                          </div>
                        </Col>
                        <Col
                          lg={3}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="col-lg-3"
                          >
                            <InputField
                              label="State"
                              name="state"
                              onChange={[Function]}
                              placeholder="CA"
                              type="text"
                              value="CA"
                            >
                              <FormGroup
                                className="InputField"
                                color=""
                                tag="div"
                              >
                                <div
                                  className="InputField form-group"
                                  color=""
                                >
                                  <Label
                                    className="control-label"
                                    htmlFor="id-state"
                                    tag="label"
                                    widths={
                                      Array [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <label
                                      className="control-label"
                                      htmlFor="id-state"
                                    >
                                      State
                                    </label>
                                  </Label>
                                  <div
                                    className=""
                                  >
                                    <Input
                                      className=""
                                      id="id-state"
                                      onChange={[Function]}
                                      placeholder="CA"
                                      type="text"
                                      value="CA"
                                    >
                                      <input
                                        className="form-control"
                                        id="id-state"
                                        onChange={[Function]}
                                        placeholder="CA"
                                        type="text"
                                        value="CA"
                                      />
                                    </Input>
                                  </div>
                                </div>
                              </FormGroup>
                            </InputField>
                          </div>
                        </Col>
                        <Col
                          lg={3}
                          tag="div"
                          widths={
                            Array [
                              "xs",
                              "sm",
                              "md",
                              "lg",
                              "xl",
                            ]
                          }
                        >
                          <div
                            className="col-lg-3"
                          >
                            <InputField
                              label="Postal code"
                              name="postalCode"
                              onChange={[Function]}
                              placeholder="94103"
                              type="text"
                              value="94103"
                            >
                              <FormGroup
                                className="InputField"
                                color=""
                                tag="div"
                              >
                                <div
                                  className="InputField form-group"
                                  color=""
                                >
                                  <Label
                                    className="control-label"
                                    htmlFor="id-postalCode"
                                    tag="label"
                                    widths={
                                      Array [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <label
                                      className="control-label"
                                      htmlFor="id-postalCode"
                                    >
                                      Postal code
                                    </label>
                                  </Label>
                                  <div
                                    className=""
                                  >
                                    <Input
                                      className=""
                                      id="id-postalCode"
                                      onChange={[Function]}
                                      placeholder="94103"
                                      type="text"
                                      value="94103"
                                    >
                                      <input
                                        className="form-control"
                                        id="id-postalCode"
                                        onChange={[Function]}
                                        placeholder="94103"
                                        type="text"
                                        value="94103"
                                      />
                                    </Input>
                                  </div>
                                </div>
                              </FormGroup>
                            </InputField>
                          </div>
                        </Col>
                      </div>
                    </Row>
                    <InputField
                      label="Country"
                      name="country"
                      onChange={[Function]}
                      type="select"
                      value="United States"
                    >
                      <FormGroup
                        className="InputField"
                        color=""
                        tag="div"
                      >
                        <div
                          className="InputField form-group"
                          color=""
                        >
                          <Label
                            className="control-label"
                            htmlFor="id-country"
                            tag="label"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <label
                              className="control-label"
                              htmlFor="id-country"
                            >
                              Country
                            </label>
                          </Label>
                          <div
                            className=""
                          >
                            <Input
                              className=""
                              id="id-country"
                              onChange={[Function]}
                              type="select"
                              value="United States"
                            >
                              <select
                                className="form-control"
                                id="id-country"
                                onChange={[Function]}
                                value="United States"
                              >
                                <option
                                  value=""
                                >
                                  -
                                </option>
                                <option
                                  key="AF"
                                  value="AF"
                                >
                                  Afghanistan
                                </option>
                                <option
                                  key="AX"
                                  value="AX"
                                >
                                  Aland Islands
                                </option>
                                <option
                                  key="AL"
                                  value="AL"
                                >
                                  Albania
                                </option>
                                <option
                                  key="DZ"
                                  value="DZ"
                                >
                                  Algeria
                                </option>
                                <option
                                  key="AS"
                                  value="AS"
                                >
                                  American Samoa
                                </option>
                                <option
                                  key="AD"
                                  value="AD"
                                >
                                  Andorra
                                </option>
                                <option
                                  key="AO"
                                  value="AO"
                                >
                                  Angola
                                </option>
                                <option
                                  key="AI"
                                  value="AI"
                                >
                                  Anguilla
                                </option>
                                <option
                                  key="AQ"
                                  value="AQ"
                                >
                                  Antarctica
                                </option>
                                <option
                                  key="AG"
                                  value="AG"
                                >
                                  Antigua and Barbuda
                                </option>
                                <option
                                  key="AR"
                                  value="AR"
                                >
                                  Argentina
                                </option>
                                <option
                                  key="AM"
                                  value="AM"
                                >
                                  Armenia
                                </option>
                                <option
                                  key="AW"
                                  value="AW"
                                >
                                  Aruba
                                </option>
                                <option
                                  key="AU"
                                  value="AU"
                                >
                                  Australia
                                </option>
                                <option
                                  key="AT"
                                  value="AT"
                                >
                                  Austria
                                </option>
                                <option
                                  key="AZ"
                                  value="AZ"
                                >
                                  Azerbaijan
                                </option>
                                <option
                                  key="BS"
                                  value="BS"
                                >
                                  Bahamas
                                </option>
                                <option
                                  key="BH"
                                  value="BH"
                                >
                                  Bahrain
                                </option>
                                <option
                                  key="BD"
                                  value="BD"
                                >
                                  Bangladesh
                                </option>
                                <option
                                  key="BB"
                                  value="BB"
                                >
                                  Barbados
                                </option>
                                <option
                                  key="BY"
                                  value="BY"
                                >
                                  Belarus
                                </option>
                                <option
                                  key="BE"
                                  value="BE"
                                >
                                  Belgium
                                </option>
                                <option
                                  key="BZ"
                                  value="BZ"
                                >
                                  Belize
                                </option>
                                <option
                                  key="BJ"
                                  value="BJ"
                                >
                                  Benin
                                </option>
                                <option
                                  key="BM"
                                  value="BM"
                                >
                                  Bermuda
                                </option>
                                <option
                                  key="BT"
                                  value="BT"
                                >
                                  Bhutan
                                </option>
                                <option
                                  key="BO"
                                  value="BO"
                                >
                                  Bolivia
                                </option>
                                <option
                                  key="BQ"
                                  value="BQ"
                                >
                                  Bonaire, Saint Eustatius and Saba 
                                </option>
                                <option
                                  key="BA"
                                  value="BA"
                                >
                                  Bosnia and Herzegovina
                                </option>
                                <option
                                  key="BW"
                                  value="BW"
                                >
                                  Botswana
                                </option>
                                <option
                                  key="BV"
                                  value="BV"
                                >
                                  Bouvet Island
                                </option>
                                <option
                                  key="BR"
                                  value="BR"
                                >
                                  Brazil
                                </option>
                                <option
                                  key="IO"
                                  value="IO"
                                >
                                  British Indian Ocean Territory
                                </option>
                                <option
                                  key="VG"
                                  value="VG"
                                >
                                  British Virgin Islands
                                </option>
                                <option
                                  key="BN"
                                  value="BN"
                                >
                                  Brunei
                                </option>
                                <option
                                  key="BG"
                                  value="BG"
                                >
                                  Bulgaria
                                </option>
                                <option
                                  key="BF"
                                  value="BF"
                                >
                                  Burkina Faso
                                </option>
                                <option
                                  key="BI"
                                  value="BI"
                                >
                                  Burundi
                                </option>
                                <option
                                  key="KH"
                                  value="KH"
                                >
                                  Cambodia
                                </option>
                                <option
                                  key="CM"
                                  value="CM"
                                >
                                  Cameroon
                                </option>
                                <option
                                  key="CA"
                                  value="CA"
                                >
                                  Canada
                                </option>
                                <option
                                  key="CV"
                                  value="CV"
                                >
                                  Cape Verde
                                </option>
                                <option
                                  key="KY"
                                  value="KY"
                                >
                                  Cayman Islands
                                </option>
                                <option
                                  key="CF"
                                  value="CF"
                                >
                                  Central African Republic
                                </option>
                                <option
                                  key="TD"
                                  value="TD"
                                >
                                  Chad
                                </option>
                                <option
                                  key="CL"
                                  value="CL"
                                >
                                  Chile
                                </option>
                                <option
                                  key="CN"
                                  value="CN"
                                >
                                  China
                                </option>
                                <option
                                  key="CX"
                                  value="CX"
                                >
                                  Christmas Island
                                </option>
                                <option
                                  key="CC"
                                  value="CC"
                                >
                                  Cocos Islands
                                </option>
                                <option
                                  key="CO"
                                  value="CO"
                                >
                                  Colombia
                                </option>
                                <option
                                  key="KM"
                                  value="KM"
                                >
                                  Comoros
                                </option>
                                <option
                                  key="CK"
                                  value="CK"
                                >
                                  Cook Islands
                                </option>
                                <option
                                  key="CR"
                                  value="CR"
                                >
                                  Costa Rica
                                </option>
                                <option
                                  key="HR"
                                  value="HR"
                                >
                                  Croatia
                                </option>
                                <option
                                  key="CU"
                                  value="CU"
                                >
                                  Cuba
                                </option>
                                <option
                                  key="CW"
                                  value="CW"
                                >
                                  Curacao
                                </option>
                                <option
                                  key="CY"
                                  value="CY"
                                >
                                  Cyprus
                                </option>
                                <option
                                  key="CZ"
                                  value="CZ"
                                >
                                  Czech Republic
                                </option>
                                <option
                                  key="CD"
                                  value="CD"
                                >
                                  Democratic Republic of the Congo
                                </option>
                                <option
                                  key="DK"
                                  value="DK"
                                >
                                  Denmark
                                </option>
                                <option
                                  key="DJ"
                                  value="DJ"
                                >
                                  Djibouti
                                </option>
                                <option
                                  key="DM"
                                  value="DM"
                                >
                                  Dominica
                                </option>
                                <option
                                  key="DO"
                                  value="DO"
                                >
                                  Dominican Republic
                                </option>
                                <option
                                  key="TL"
                                  value="TL"
                                >
                                  East Timor
                                </option>
                                <option
                                  key="EC"
                                  value="EC"
                                >
                                  Ecuador
                                </option>
                                <option
                                  key="EG"
                                  value="EG"
                                >
                                  Egypt
                                </option>
                                <option
                                  key="SV"
                                  value="SV"
                                >
                                  El Salvador
                                </option>
                                <option
                                  key="GQ"
                                  value="GQ"
                                >
                                  Equatorial Guinea
                                </option>
                                <option
                                  key="ER"
                                  value="ER"
                                >
                                  Eritrea
                                </option>
                                <option
                                  key="EE"
                                  value="EE"
                                >
                                  Estonia
                                </option>
                                <option
                                  key="ET"
                                  value="ET"
                                >
                                  Ethiopia
                                </option>
                                <option
                                  key="FK"
                                  value="FK"
                                >
                                  Falkland Islands
                                </option>
                                <option
                                  key="FO"
                                  value="FO"
                                >
                                  Faroe Islands
                                </option>
                                <option
                                  key="FJ"
                                  value="FJ"
                                >
                                  Fiji
                                </option>
                                <option
                                  key="FI"
                                  value="FI"
                                >
                                  Finland
                                </option>
                                <option
                                  key="FR"
                                  value="FR"
                                >
                                  France
                                </option>
                                <option
                                  key="GF"
                                  value="GF"
                                >
                                  French Guiana
                                </option>
                                <option
                                  key="PF"
                                  value="PF"
                                >
                                  French Polynesia
                                </option>
                                <option
                                  key="TF"
                                  value="TF"
                                >
                                  French Southern Territories
                                </option>
                                <option
                                  key="GA"
                                  value="GA"
                                >
                                  Gabon
                                </option>
                                <option
                                  key="GM"
                                  value="GM"
                                >
                                  Gambia
                                </option>
                                <option
                                  key="GE"
                                  value="GE"
                                >
                                  Georgia
                                </option>
                                <option
                                  key="DE"
                                  value="DE"
                                >
                                  Germany
                                </option>
                                <option
                                  key="GH"
                                  value="GH"
                                >
                                  Ghana
                                </option>
                                <option
                                  key="GI"
                                  value="GI"
                                >
                                  Gibraltar
                                </option>
                                <option
                                  key="GR"
                                  value="GR"
                                >
                                  Greece
                                </option>
                                <option
                                  key="GL"
                                  value="GL"
                                >
                                  Greenland
                                </option>
                                <option
                                  key="GD"
                                  value="GD"
                                >
                                  Grenada
                                </option>
                                <option
                                  key="GP"
                                  value="GP"
                                >
                                  Guadeloupe
                                </option>
                                <option
                                  key="GU"
                                  value="GU"
                                >
                                  Guam
                                </option>
                                <option
                                  key="GT"
                                  value="GT"
                                >
                                  Guatemala
                                </option>
                                <option
                                  key="GG"
                                  value="GG"
                                >
                                  Guernsey
                                </option>
                                <option
                                  key="GN"
                                  value="GN"
                                >
                                  Guinea
                                </option>
                                <option
                                  key="GW"
                                  value="GW"
                                >
                                  Guinea-Bissau
                                </option>
                                <option
                                  key="GY"
                                  value="GY"
                                >
                                  Guyana
                                </option>
                                <option
                                  key="HT"
                                  value="HT"
                                >
                                  Haiti
                                </option>
                                <option
                                  key="HM"
                                  value="HM"
                                >
                                  Heard Island and McDonald Islands
                                </option>
                                <option
                                  key="HN"
                                  value="HN"
                                >
                                  Honduras
                                </option>
                                <option
                                  key="HK"
                                  value="HK"
                                >
                                  Hong Kong
                                </option>
                                <option
                                  key="HU"
                                  value="HU"
                                >
                                  Hungary
                                </option>
                                <option
                                  key="IS"
                                  value="IS"
                                >
                                  Iceland
                                </option>
                                <option
                                  key="IN"
                                  value="IN"
                                >
                                  India
                                </option>
                                <option
                                  key="ID"
                                  value="ID"
                                >
                                  Indonesia
                                </option>
                                <option
                                  key="IR"
                                  value="IR"
                                >
                                  Iran
                                </option>
                                <option
                                  key="IQ"
                                  value="IQ"
                                >
                                  Iraq
                                </option>
                                <option
                                  key="IE"
                                  value="IE"
                                >
                                  Ireland
                                </option>
                                <option
                                  key="IM"
                                  value="IM"
                                >
                                  Isle of Man
                                </option>
                                <option
                                  key="IL"
                                  value="IL"
                                >
                                  Israel
                                </option>
                                <option
                                  key="IT"
                                  value="IT"
                                >
                                  Italy
                                </option>
                                <option
                                  key="CI"
                                  value="CI"
                                >
                                  Ivory Coast
                                </option>
                                <option
                                  key="JM"
                                  value="JM"
                                >
                                  Jamaica
                                </option>
                                <option
                                  key="JP"
                                  value="JP"
                                >
                                  Japan
                                </option>
                                <option
                                  key="JE"
                                  value="JE"
                                >
                                  Jersey
                                </option>
                                <option
                                  key="JO"
                                  value="JO"
                                >
                                  Jordan
                                </option>
                                <option
                                  key="KZ"
                                  value="KZ"
                                >
                                  Kazakhstan
                                </option>
                                <option
                                  key="KE"
                                  value="KE"
                                >
                                  Kenya
                                </option>
                                <option
                                  key="KI"
                                  value="KI"
                                >
                                  Kiribati
                                </option>
                                <option
                                  key="XK"
                                  value="XK"
                                >
                                  Kosovo
                                </option>
                                <option
                                  key="KW"
                                  value="KW"
                                >
                                  Kuwait
                                </option>
                                <option
                                  key="KG"
                                  value="KG"
                                >
                                  Kyrgyzstan
                                </option>
                                <option
                                  key="LA"
                                  value="LA"
                                >
                                  Laos
                                </option>
                                <option
                                  key="LV"
                                  value="LV"
                                >
                                  Latvia
                                </option>
                                <option
                                  key="LB"
                                  value="LB"
                                >
                                  Lebanon
                                </option>
                                <option
                                  key="LS"
                                  value="LS"
                                >
                                  Lesotho
                                </option>
                                <option
                                  key="LR"
                                  value="LR"
                                >
                                  Liberia
                                </option>
                                <option
                                  key="LY"
                                  value="LY"
                                >
                                  Libya
                                </option>
                                <option
                                  key="LI"
                                  value="LI"
                                >
                                  Liechtenstein
                                </option>
                                <option
                                  key="LT"
                                  value="LT"
                                >
                                  Lithuania
                                </option>
                                <option
                                  key="LU"
                                  value="LU"
                                >
                                  Luxembourg
                                </option>
                                <option
                                  key="MO"
                                  value="MO"
                                >
                                  Macao
                                </option>
                                <option
                                  key="MK"
                                  value="MK"
                                >
                                  Macedonia
                                </option>
                                <option
                                  key="MG"
                                  value="MG"
                                >
                                  Madagascar
                                </option>
                                <option
                                  key="MW"
                                  value="MW"
                                >
                                  Malawi
                                </option>
                                <option
                                  key="MY"
                                  value="MY"
                                >
                                  Malaysia
                                </option>
                                <option
                                  key="MV"
                                  value="MV"
                                >
                                  Maldives
                                </option>
                                <option
                                  key="ML"
                                  value="ML"
                                >
                                  Mali
                                </option>
                                <option
                                  key="MT"
                                  value="MT"
                                >
                                  Malta
                                </option>
                                <option
                                  key="MH"
                                  value="MH"
                                >
                                  Marshall Islands
                                </option>
                                <option
                                  key="MQ"
                                  value="MQ"
                                >
                                  Martinique
                                </option>
                                <option
                                  key="MR"
                                  value="MR"
                                >
                                  Mauritania
                                </option>
                                <option
                                  key="MU"
                                  value="MU"
                                >
                                  Mauritius
                                </option>
                                <option
                                  key="YT"
                                  value="YT"
                                >
                                  Mayotte
                                </option>
                                <option
                                  key="MX"
                                  value="MX"
                                >
                                  Mexico
                                </option>
                                <option
                                  key="FM"
                                  value="FM"
                                >
                                  Micronesia
                                </option>
                                <option
                                  key="MD"
                                  value="MD"
                                >
                                  Moldova
                                </option>
                                <option
                                  key="MC"
                                  value="MC"
                                >
                                  Monaco
                                </option>
                                <option
                                  key="MN"
                                  value="MN"
                                >
                                  Mongolia
                                </option>
                                <option
                                  key="ME"
                                  value="ME"
                                >
                                  Montenegro
                                </option>
                                <option
                                  key="MS"
                                  value="MS"
                                >
                                  Montserrat
                                </option>
                                <option
                                  key="MA"
                                  value="MA"
                                >
                                  Morocco
                                </option>
                                <option
                                  key="MZ"
                                  value="MZ"
                                >
                                  Mozambique
                                </option>
                                <option
                                  key="MM"
                                  value="MM"
                                >
                                  Myanmar
                                </option>
                                <option
                                  key="NA"
                                  value="NA"
                                >
                                  Namibia
                                </option>
                                <option
                                  key="NR"
                                  value="NR"
                                >
                                  Nauru
                                </option>
                                <option
                                  key="NP"
                                  value="NP"
                                >
                                  Nepal
                                </option>
                                <option
                                  key="NL"
                                  value="NL"
                                >
                                  Netherlands
                                </option>
                                <option
                                  key="NC"
                                  value="NC"
                                >
                                  New Caledonia
                                </option>
                                <option
                                  key="NZ"
                                  value="NZ"
                                >
                                  New Zealand
                                </option>
                                <option
                                  key="NI"
                                  value="NI"
                                >
                                  Nicaragua
                                </option>
                                <option
                                  key="NE"
                                  value="NE"
                                >
                                  Niger
                                </option>
                                <option
                                  key="NG"
                                  value="NG"
                                >
                                  Nigeria
                                </option>
                                <option
                                  key="NU"
                                  value="NU"
                                >
                                  Niue
                                </option>
                                <option
                                  key="NF"
                                  value="NF"
                                >
                                  Norfolk Island
                                </option>
                                <option
                                  key="KP"
                                  value="KP"
                                >
                                  North Korea
                                </option>
                                <option
                                  key="MP"
                                  value="MP"
                                >
                                  Northern Mariana Islands
                                </option>
                                <option
                                  key="NO"
                                  value="NO"
                                >
                                  Norway
                                </option>
                                <option
                                  key="OM"
                                  value="OM"
                                >
                                  Oman
                                </option>
                                <option
                                  key="PK"
                                  value="PK"
                                >
                                  Pakistan
                                </option>
                                <option
                                  key="PW"
                                  value="PW"
                                >
                                  Palau
                                </option>
                                <option
                                  key="PS"
                                  value="PS"
                                >
                                  Palestinian Territory
                                </option>
                                <option
                                  key="PA"
                                  value="PA"
                                >
                                  Panama
                                </option>
                                <option
                                  key="PG"
                                  value="PG"
                                >
                                  Papua New Guinea
                                </option>
                                <option
                                  key="PY"
                                  value="PY"
                                >
                                  Paraguay
                                </option>
                                <option
                                  key="PE"
                                  value="PE"
                                >
                                  Peru
                                </option>
                                <option
                                  key="PH"
                                  value="PH"
                                >
                                  Philippines
                                </option>
                                <option
                                  key="PN"
                                  value="PN"
                                >
                                  Pitcairn
                                </option>
                                <option
                                  key="PL"
                                  value="PL"
                                >
                                  Poland
                                </option>
                                <option
                                  key="PT"
                                  value="PT"
                                >
                                  Portugal
                                </option>
                                <option
                                  key="PR"
                                  value="PR"
                                >
                                  Puerto Rico
                                </option>
                                <option
                                  key="QA"
                                  value="QA"
                                >
                                  Qatar
                                </option>
                                <option
                                  key="CG"
                                  value="CG"
                                >
                                  Republic of the Congo
                                </option>
                                <option
                                  key="RE"
                                  value="RE"
                                >
                                  Reunion
                                </option>
                                <option
                                  key="RO"
                                  value="RO"
                                >
                                  Romania
                                </option>
                                <option
                                  key="RU"
                                  value="RU"
                                >
                                  Russia
                                </option>
                                <option
                                  key="RW"
                                  value="RW"
                                >
                                  Rwanda
                                </option>
                                <option
                                  key="BL"
                                  value="BL"
                                >
                                  Saint Barthelemy
                                </option>
                                <option
                                  key="SH"
                                  value="SH"
                                >
                                  Saint Helena
                                </option>
                                <option
                                  key="KN"
                                  value="KN"
                                >
                                  Saint Kitts and Nevis
                                </option>
                                <option
                                  key="LC"
                                  value="LC"
                                >
                                  Saint Lucia
                                </option>
                                <option
                                  key="MF"
                                  value="MF"
                                >
                                  Saint Martin
                                </option>
                                <option
                                  key="PM"
                                  value="PM"
                                >
                                  Saint Pierre and Miquelon
                                </option>
                                <option
                                  key="VC"
                                  value="VC"
                                >
                                  Saint Vincent and the Grenadines
                                </option>
                                <option
                                  key="WS"
                                  value="WS"
                                >
                                  Samoa
                                </option>
                                <option
                                  key="SM"
                                  value="SM"
                                >
                                  San Marino
                                </option>
                                <option
                                  key="ST"
                                  value="ST"
                                >
                                  Sao Tome and Principe
                                </option>
                                <option
                                  key="SA"
                                  value="SA"
                                >
                                  Saudi Arabia
                                </option>
                                <option
                                  key="SN"
                                  value="SN"
                                >
                                  Senegal
                                </option>
                                <option
                                  key="RS"
                                  value="RS"
                                >
                                  Serbia
                                </option>
                                <option
                                  key="SC"
                                  value="SC"
                                >
                                  Seychelles
                                </option>
                                <option
                                  key="SL"
                                  value="SL"
                                >
                                  Sierra Leone
                                </option>
                                <option
                                  key="SG"
                                  value="SG"
                                >
                                  Singapore
                                </option>
                                <option
                                  key="SX"
                                  value="SX"
                                >
                                  Sint Maarten
                                </option>
                                <option
                                  key="SK"
                                  value="SK"
                                >
                                  Slovakia
                                </option>
                                <option
                                  key="SI"
                                  value="SI"
                                >
                                  Slovenia
                                </option>
                                <option
                                  key="SB"
                                  value="SB"
                                >
                                  Solomon Islands
                                </option>
                                <option
                                  key="SO"
                                  value="SO"
                                >
                                  Somalia
                                </option>
                                <option
                                  key="ZA"
                                  value="ZA"
                                >
                                  South Africa
                                </option>
                                <option
                                  key="GS"
                                  value="GS"
                                >
                                  South Georgia and the South Sandwich Islands
                                </option>
                                <option
                                  key="KR"
                                  value="KR"
                                >
                                  South Korea
                                </option>
                                <option
                                  key="SS"
                                  value="SS"
                                >
                                  South Sudan
                                </option>
                                <option
                                  key="ES"
                                  value="ES"
                                >
                                  Spain
                                </option>
                                <option
                                  key="LK"
                                  value="LK"
                                >
                                  Sri Lanka
                                </option>
                                <option
                                  key="SD"
                                  value="SD"
                                >
                                  Sudan
                                </option>
                                <option
                                  key="SR"
                                  value="SR"
                                >
                                  Suriname
                                </option>
                                <option
                                  key="SJ"
                                  value="SJ"
                                >
                                  Svalbard and Jan Mayen
                                </option>
                                <option
                                  key="SZ"
                                  value="SZ"
                                >
                                  Swaziland
                                </option>
                                <option
                                  key="SE"
                                  value="SE"
                                >
                                  Sweden
                                </option>
                                <option
                                  key="CH"
                                  value="CH"
                                >
                                  Switzerland
                                </option>
                                <option
                                  key="SY"
                                  value="SY"
                                >
                                  Syria
                                </option>
                                <option
                                  key="TW"
                                  value="TW"
                                >
                                  Taiwan
                                </option>
                                <option
                                  key="TJ"
                                  value="TJ"
                                >
                                  Tajikistan
                                </option>
                                <option
                                  key="TZ"
                                  value="TZ"
                                >
                                  Tanzania
                                </option>
                                <option
                                  key="TH"
                                  value="TH"
                                >
                                  Thailand
                                </option>
                                <option
                                  key="TG"
                                  value="TG"
                                >
                                  Togo
                                </option>
                                <option
                                  key="TK"
                                  value="TK"
                                >
                                  Tokelau
                                </option>
                                <option
                                  key="TO"
                                  value="TO"
                                >
                                  Tonga
                                </option>
                                <option
                                  key="TT"
                                  value="TT"
                                >
                                  Trinidad and Tobago
                                </option>
                                <option
                                  key="TN"
                                  value="TN"
                                >
                                  Tunisia
                                </option>
                                <option
                                  key="TR"
                                  value="TR"
                                >
                                  Turkey
                                </option>
                                <option
                                  key="TM"
                                  value="TM"
                                >
                                  Turkmenistan
                                </option>
                                <option
                                  key="TC"
                                  value="TC"
                                >
                                  Turks and Caicos Islands
                                </option>
                                <option
                                  key="TV"
                                  value="TV"
                                >
                                  Tuvalu
                                </option>
                                <option
                                  key="VI"
                                  value="VI"
                                >
                                  U.S. Virgin Islands
                                </option>
                                <option
                                  key="UG"
                                  value="UG"
                                >
                                  Uganda
                                </option>
                                <option
                                  key="UA"
                                  value="UA"
                                >
                                  Ukraine
                                </option>
                                <option
                                  key="AE"
                                  value="AE"
                                >
                                  United Arab Emirates
                                </option>
                                <option
                                  key="GB"
                                  value="GB"
                                >
                                  United Kingdom
                                </option>
                                <option
                                  key="US"
                                  value="US"
                                >
                                  United States
                                </option>
                                <option
                                  key="UM"
                                  value="UM"
                                >
                                  United States Minor Outlying Islands
                                </option>
                                <option
                                  key="UY"
                                  value="UY"
                                >
                                  Uruguay
                                </option>
                                <option
                                  key="UZ"
                                  value="UZ"
                                >
                                  Uzbekistan
                                </option>
                                <option
                                  key="VU"
                                  value="VU"
                                >
                                  Vanuatu
                                </option>
                                <option
                                  key="VA"
                                  value="VA"
                                >
                                  Vatican
                                </option>
                                <option
                                  key="VE"
                                  value="VE"
                                >
                                  Venezuela
                                </option>
                                <option
                                  key="VN"
                                  value="VN"
                                >
                                  Vietnam
                                </option>
                                <option
                                  key="WF"
                                  value="WF"
                                >
                                  Wallis and Futuna
                                </option>
                                <option
                                  key="EH"
                                  value="EH"
                                >
                                  Western Sahara
                                </option>
                                <option
                                  key="YE"
                                  value="YE"
                                >
                                  Yemen
                                </option>
                                <option
                                  key="ZM"
                                  value="ZM"
                                >
                                  Zambia
                                </option>
                                <option
                                  key="ZW"
                                  value="ZW"
                                >
                                  Zimbabwe
                                </option>
                              </select>
                            </Input>
                          </div>
                        </div>
                      </FormGroup>
                    </InputField>
                    <div>
                      <Button
                        className=""
                        color="success"
                        disabled={false}
                        tag="button"
                      >
                        <button
                          aria-label={null}
                          className="btn btn-success"
                          disabled={false}
                          onClick={[Function]}
                        >
                          Update billing details
                        </button>
                      </Button>
                    </div>
                  </form>
                </Form>
              </div>
            </Col>
          </div>
        </Row>
      </div>
    </Container>
  </div>
</BillingDetailsForm>
`;
